crates/edifact-rs-derive/tests/ui/fail_generic_struct.stderr
error: EdifactSerialize/EdifactDeserialize do not support generic structs
  --> $DIR/fail_generic_struct.rs:15:23
   |
15 | struct GenericSegment<T> {
   |                       ^
